	* removed RSS support
	* removed feature to resolve country for peers
	* added support for BEP 32, "IPv6 extension for DHT"
	* overhauled listen socket and UDP socket handling, improving multi-home
	  support and bind-to-device
	* added new read_resume_data() function, initializing add_torrent_params
	* removed deprecated fields from add_torrent_params
	* deprecate "resume_data" field in add_torrent_params
	* improved support for bind-to-device
	* deprecated ssl_listen, SSL sockets are specified in listen_interfaces now
	* improved support for listening on multiple sockets and interfaces
	* resume data no longer has timestamps of files

1.1.1 release

	* fix set_settings in python binding
	* Added missing alert categories in python binding
	* Added dht_get_peers_reply_alert alert in python binding

1.1.0 release

	* improve robustness and performance of uTP PMTU discovery
	* fix duplicate ACK issue in uTP
	* support filtering which parts of session state are loaded by load_state()
	* deprecate support for adding torrents by HTTP URL
	* allow specifying which tracker to scrape in scrape_tracker
	* tracker response alerts from user initiated announces/scrapes are now
	  posted regardless of alert mask
	* improve DHT performance when changing external IP (primarily affects
	  bootstrapping).
	* add feature to stop torrents immediately after checking files is done
	* make all non-auto managed torrents exempt from queuing logic, including
	  checking torrents.
	* add option to not proxy tracker connections through proxy
	* removed sparse-regions feature
	* support using 0 disk threads (to perform disk I/O in network thread)
	* removed deprecated handle_alert template
	* enable logging build config by default (but alert mask disabled by default)
	* deprecated RSS API
	* experimental support for BEP 38, "mutable torrents"
	* replaced lazy_bdecode with a new bdecoder that's a lot more efficient
	* deprecate time functions, expose typedefs of boost::chrono in the