@@ -1,3 +1,4 @@
+	* move files one-by-one when moving storage for a torrent
 	* removed RSS support
 	* removed feature to resolve country for peers
 	* added support for BEP 32, "IPv6 extension for DHT"
